--- a/mijn-portfolio/src/components/Header.module.css
+++ b/mijn-portfolio/src/components/Header.module.css
@@ -23,6 +23,10 @@
     font-size: 1.4rem;
     font-weight: bold;
     color: white;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
 }
 
 .menuButton {
@@ -73,5 +77,17 @@
 }
 
 .slideMenu a:hover {
+    color: #007bff;
+}
+
+.slideMenu button {
+    all: unset;
+    /* Reset alle standaard button-styles */
+    font-weight: 500;
+    color: white;
+    cursor: pointer;
+}
+
+.slideMenu button:hover {
     color: #007bff;
 }
